# docs/swagger.json
@@ -88,36 +88,47 @@
         },
         "/test/": {
             "post": {
-                "description": "只有管理员可以添加用户",
+                "description": "描述",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "test"
+                    "测试"
                 ],
-                "summary": "新增用户",
+                "summary": "接口测试",
                 "parameters": [
                     {
-                        "description": "Utest",
+                        "description": "desc",
                         "name": "body",
                         "in": "body",
-                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.Utest"
+                            "$ref": "#/definitions/v1.TParam"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"msg\":\"创建用户完成!\",\"results\":{\"id\":1,\"nickname\":\"小明\",\"account\":\"xiaoming\",\"password\":\"123456\",\"email\":\"\",\"phone\":\"\",\"isAdmin\":false,\"photoFile\":\"\",\"createdTime\":\"\"}}}",
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/utils.ResponseStruct"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/v1.TResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "results": {
+                                            "$ref": "#/definitions/v1.TParam"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
-                        "description": "{\"msg\": \"参数错误/用户已存在，创建失败!\", \"results\": null}",
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.ResponseStruct"
+                            "$ref": "#/definitions/v1.TResponse2"
                         }
                     }
                 }
@@ -173,7 +184,7 @@
                 "summary": "新增用户",
                 "parameters": [
                     {
-                        "description": "??",
+                        "description": "desc",
                         "name": "Body",
                         "in": "body",
                         "required": true,
@@ -184,17 +195,17 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "返回参数",
+                        "description": "OK",
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/utils.ResponseStruct"
+                                    "$ref": "#/definitions/utils.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "results": {
-                                            "$ref": "#/definitions/v1.AddUserParam"
+                                            "$ref": "#/definitions/models.User"
                                         }
                                     }
                                 }
@@ -202,9 +213,9 @@
                         }
                     },
                     "400": {
-                        "description": "{\"message\": \"参数错误/用户已存在，创建失败!\", \"results\": null}",
+                        "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/utils.ResponseStruct"
+                            "$ref": "#/definitions/utils.Response"
                         }
                     }
                 }
@@ -263,13 +274,12 @@
                         "required": true
                     },
                     {
-                        "default": "{\"nickname\": \"小明\", \"password\": \"123456\", \"email\": \"\", \"phone\": \"\"}",
-                        "description": "用户信息",
+                        "description": "desc",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/v1.ModifyUserParam"
                         }
                     }
                 ],
@@ -314,7 +324,49 @@
                         }
                     },
                     "400": {
-                        "description": "{\"msg\": \"参数错误/删除失败!\", \"results\": null}",
+                        "description": "{\"message\": \"参数错误/删除失败!\", \"results\": null}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}/photo/": {
+            "put": {
+                "description": "只有管理员/或用户自己可以修改",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户"
+                ],
+                "summary": "上传用户头像",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "头像",
+                        "name": "photoFile",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"message\":\"成功上传用户头像!\",\"results\":[{\"id\":1,\"nickname\":\"小明\",\"account\":\"xiaoming\",\"password\":\"123456\",\"email\":\"\",\"phone\":\"\",\"isAdmin\":false,\"photoFile\":\"\",\"createdTime\":\"\"}}]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "{\"msg\": \"参数错误/头像上传失败!\", \"results\": null}",
                         "schema": {
                             "type": "string"
                         }
@@ -555,10 +607,52 @@
         }
     },
     "definitions": {
-        "utils.ResponseStruct": {
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "description": "账号",
+                    "type": "string"
+                },
+                "createdTime": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "用户id",
+                    "type": "integer"
+                },
+                "isAdmin": {
+                    "description": "是否是管理员",
+                    "type": "boolean"
+                },
+                "nickname": {
+                    "description": "名称",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机",
+                    "type": "string"
+                },
+                "photoFile": {
+                    "description": "用户头像",
+                    "type": "string"
+                }
+            }
+        },
+        "utils.Response": {
             "type": "object",
             "properties": {
                 "message": {
+                    "description": "返回说明",
                     "type": "string"
                 },
                 "results": {
@@ -570,42 +664,125 @@
             "type": "object",
             "required": [
                 "account",
-                "nickname"
+                "nickname",
+                "password"
             ],
             "properties": {
                 "account": {
+                    "description": "账号",
                     "type": "string",
-                    "example": "1"
+                    "example": "xiaom"
+                },
+                "createdTime": {
+                    "description": "创建时间",
+                    "type": "string",
+                    "example": " "
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string",
+                    "example": " "
+                },
+                "isAdmin": {
+                    "description": "是否是管理员",
+                    "type": "boolean",
+                    "example": false
                 },
                 "nickname": {
+                    "description": "名称",
                     "type": "string",
-                    "example": "2"
+                    "example": "小明"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string",
+                    "example": "123456"
+                },
+                "phone": {
+                    "description": "手机",
+                    "type": "string",
+                    "example": " "
+                },
+                "photoFile": {
+                    "description": "用户头像",
+                    "type": "string",
+                    "example": " "
                 }
             }
         },
-        "v1.Utest": {
+        "v1.ModifyUserParam": {
+            "type": "object",
+            "required": [
+                "nickname",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "description": "邮箱",
+                    "type": "string",
+                    "example": " "
+                },
+                "nickname": {
+                    "description": "名称",
+                    "type": "string",
+                    "example": "xiaom"
+                },
+                "password": {
+                    "description": "密码",
+                    "type": "string",
+                    "example": "123456"
+                },
+                "phone": {
+                    "description": "手机",
+                    "type": "string",
+                    "example": " "
+                }
+            }
+        },
+        "v1.TParam": {
+            "type": "object",
+            "required": [
+                "a"
+            ],
+            "properties": {
+                "a": {
+                    "description": "字符串a",
+                    "type": "string",
+                    "example": "a"
+                },
+                "b": {
+                    "description": "数字b",
+                    "type": "integer",
+                    "example": 2
+                },
+                "c": {
+                    "description": "布尔c",
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
+        "v1.TResponse": {
             "type": "object",
             "properties": {
-                "body": {
-                    "type": "object",
-                    "properties": {
-                        "code": {
-                            "description": "Required: true",
-                            "type": "string"
-                        },
-                        "data": {
-                            "description": "An optional field name to which this validation applies",
-                            "type": "object"
-                        },
-                        "msg": {
-                            "description": "Required: true",
-                            "type": "string"
-                        },
-                        "status": {
-                            "description": "Required: true",
-                            "type": "boolean"
-                        }
-                    }
+                "message": {
+                    "description": "成功返回说明",
+                    "type": "string"
+                },
+                "results": {
+                    "type": "object"
+                }
+            }
+        },
+        "v1.TResponse2": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "错误返回说明",
+                    "type": "string"
+                },
+                "results": {
+                    "type": "object"
                 }
             }
         }
